Make Sure You Are Square With Your God Before Trying To Merge This

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,8 @@ image:
   file: .gitpod/Dockerfile
 
 tasks:
+  - name: FiraCode
+    init: .gitpod/firacode/init.sh
   - name: Git
     command: .gitpod/git/command.sh
 
