--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -4,4 +4,7 @@ USER root
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN pip install --user poetry
+RUN apt-get update
+
+RUN wget https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py \
+    && python3 get-poetry.py --yes
