--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,6 +13,9 @@ vscode:
     - pkief.material-icon-theme@4.4.0:rUeW9VprKCFBXYTvg+AimA==
     - eamodio.gitlens@10.2.1:WIWu3zHU4VPT8r/v866LUw==
     - formulahendry.code-runner@0.11.1:hLisqB9ugwNp1563+VahaQ==
+    - almenon.arepl@1.0.20:Uu7lIOwyLgmNWpTwCl/iqQ==
+    - littlefoxteam.vscode-python-test-adapter@0.3.16:tZ/6xOSSdKUaq6JCUVkD+A==
+
 
 github:
   prebuilds:
