--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ image:
 
 tasks:
   - name: FiraCode
-    init: .gitpod/firacode/init.sh
+    command: .gitpod/firacode/init.sh
   - name: Git
     command: .gitpod/git/command.sh
 
